# fosite

./: Makefile  Makefile.am  Makefile.in  README  aclocal.m4  binaries.am  common.am  config.guess  config.status  configure  configure.ac  depcomp  fosite.f90  init.f90  main.f90  makedeps
baldr/: Makefile  baldr.py  baldr_data.py  baldr_flags.py  baldr_impl.fpp  gauss2d.py  plot.py
boundary/: Makefile  Makefile.am  Makefile.dep  Makefile.in  boundary_absorbing.f90  boundary_axis.f90  boundary_custom.f90  boundary_extrapolation.f90  boundary_farfield.f90  boundary_fixed.f90  boundary_folded.f90  boundary_generic.f90  boundary_moving_wall.f90  boundary_nogradients.f90  boundary_noh.f90  boundary_noslip.f90  boundary_periodic.f90  boundary_reflecting.f90
common/: Makefile  Makefile.am  Makefile.dep  Makefile.in  boundary_common.f90  common_dict.f90  common_types.f90  constants_common.f90  dict_common.f90  fileio_common.f90  fluxes_common.f90  fosite_common.f90  geometry_common.f90  gravity_common.f90  logio_common.f90  mesh_common.f90  multipole_common.f90  output_common.f90  physics_common.f90  poisson_common.f90  reconstruction_common.f90  sources_common.f90  tap.f90  timedisc_common.f90
doc/: Doxyfile.in  Makefile.in  coding_guidelines.txt  mainpage.dox  module_hierarchy.txt  types.txt
examples/: KHI.f90  KHI2.f90  RMI.f90  TCI.f90  agndisk.f90  betadisk1d.f90  bindisk.f90  forcing-turb.f90  init_KHI.f90  init_RMI.f90  init_RTI.f90  init_TCI.f90  init_bondi2d.f90  init_bondi3d.f90  init_collapse.f90  init_gauss2d.f90  init_gauss3d.f90  init_noh2d.f90  init_noh3d.f90  init_poiseuille.f90  init_pringle.f90  init_pringle2d.f90  init_riemann1d.f90  init_riemann2d.f90  init_riemann3d.f90  init_sedov2d.f90  init_sedov3d.f90  init_vortex2d.f90  init_vortex3d.f90  kepdisk.f90  markward.f90  orbitingcylinders.f90  planet2d.f90  planeteu.f90  poiseuille.f90  selfsimdisk1d.f90  statdisk.f90  ttauridisk.f90  vortex2d_sphere.f90
fluxes/: Makefile  Makefile.am  Makefile.dep  Makefile.in  fluxes_generic.f90  fluxes_midpoint.f90  fluxes_trapezoidal.f90  reconstruction_constant.f90  reconstruction_generic.f90  reconstruction_linear.f90
io/: Makefile  Makefile.am  Makefile.dep  Makefile.in  fileio_binary.f90  fileio_generic.f90  fileio_gnuplot.f90  fileio_hdf5.f90  fileio_netcdf.f90  fileio_npy.f90  fileio_vtk.f90  fileio_xdmf.f90  logio_binary.f90  logio_generic.f90  output_generic.f90  output_gnuplot.f90  output_opendx.f90
mesh/: Makefile  Makefile.am  Makefile.dep  Makefile.in  geometry_bianglespherical.f90  geometry_cartesian.f90  geometry_channel.f90  geometry_cylindrical.f90  geometry_elliptic.f90  geometry_generic.f90  geometry_lncoshcylindrical.f90  geometry_logpolar.f90  geometry_oblatespheroidal.f90  geometry_polar.f90  geometry_polypolar.f90  geometry_sinhcartesian.f90  geometry_sinhpolar.f90  geometry_sinhspherical.f90  geometry_sinhtanh.f90  geometry_spherical.f90  geometry_tancylindrical.f90  geometry_tanpolar.f90  mesh_generic.f90  mesh_midpoint.f90  mesh_trapezoidal.f90
numtools/: Makefile  Makefile.am  Makefile.in  factors.f90  fftw.f90  functions.f90  integration.f90  roots.f90  solutions.f90
physics/: Makefile  Makefile.am  Makefile.dep  Makefile.in  constants_SI.f90  constants_generic.f90  constants_geometrical.f90  physics_euler2D.f90  physics_euler2Diamrot.f90  physics_euler2Diamt.f90  physics_euler2Disoiamrot.f90  physics_euler2Disoiamt.f90  physics_euler2Disothm.f90  physics_euler2Dsgs.f90  physics_euler3Drotamt.f90  physics_euler3Drotamtsgs.f90  physics_euler3Drotsym.f90  physics_euler3Drotsymsgs.f90  physics_generic.f90
sources/: Makefile  Makefile.am  Makefile.dep  Makefile.in  gravity_binary.f90  gravity_generic.f90  gravity_monopol.f90  gravity_multigrid.f90  gravity_pointmass.f90  gravity_potential.f90  gravity_spectral.f90  multipole_cylindrical.f90  multipole_generic.f90  multipole_spherical.f90  poisson_generic.f90  poisson_multigrid.f90  sources_boundary.f90  sources_c_accel.f90  sources_cooling.f90  sources_diskcooling.f90  sources_diskthomson.f90  sources_forcing.f90  sources_generic.f90  sources_planetcooling.f90  sources_planetheating.f90  sources_pointmass.f90  sources_rotframe.f90  sources_selfgravitation.f90  sources_sgs.f90  sources_viscosity.f90  sources_wave_damping.f90
tests/: KHI.f90  Makefile.am  Makefile.in  RTI.f90  bondi2d.f90  bondi3d.f90  collapse.f90  gauss2d.f90  gauss3d.f90  noh2d.f90  noh3d.f90  ode.f90  pringle.f90  riemann1d.f90  riemann2d.f90  riemann3d.f90  sedov2d.f90  sedov3d.f90  vortex2d.f90  vortex3d.f90
timedisc/: Makefile  Makefile.am  Makefile.dep  Makefile.in  dumka_constants.f90  timedisc_cashkarp.f90  timedisc_dormand_prince.f90  timedisc_dumka.f90  timedisc_generic.f90  timedisc_modeuler.f90  timedisc_multistep.f90  timedisc_rkfehlberg.f90  timedisc_ssprk.f90
